--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1900,7 +1900,9 @@ li,.footer_text{
 .button_5{
   margin-left: 136px;
 }
-
+.button_2,.button_4,.button_6,.button_8{
+  margin-left: 412px;
+}
 
 
 
