--- a/CSS/Summar_flower.css
+++ b/CSS/Summar_flower.css
@@ -1062,9 +1062,51 @@ li,.footer_text{
 
 
      @media (min-width: 841px) and (max-width: 1080px){
-      footer {
+     
+
+.star_1 {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    gap: 10px;
+    padding: 40px 30px;
+    width: 100%;
+    margin: auto;
+}
+.button-1 {
+    width: 95px;
+    height: 40px;
+    font-size: 15px;
+}
+.parents_7,.parents_8 {
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+    margin-top: 30px;
+}
+.parents_9{
+  gap: 30px;
+}
+.A,.B,.C {
+  width: 250px;
+  height: 230px;
+}
+.summar_text_4 {
+    text-align: center;
+    padding: 14px 0px;
+    font-size: 16px;
+    color: #1a1b20;
+}
+.parensts_10{
+  margin: auto;
+  width: 100%;
+  padding: 0px 30px;
+  height:940px;
+}
+.footer-form {
+    width: 184px;
+    height: 45px;
+}
+.button_form {
+    width: 72px;
+    height: 44px;
 }
      }
