--- a/CSS/Summar_flower.css
+++ b/CSS/Summar_flower.css
@@ -1089,11 +1089,14 @@ li,.footer_text{
   width: 250px;
   height: 230px;
 }
-.summar_text_4 {
+.summar_text_4{
     text-align: center;
     padding: 14px 0px;
     font-size: 16px;
     color: #1a1b20;
+}
+.summar_text,.summar_text_2 {
+  font-size: 16px;
 }
 .parensts_10{
   margin: auto;
@@ -1111,5 +1114,16 @@ li,.footer_text{
 }
 .footer_4{
   display: none;
+}
+.nav_1 {
+    display: flex;
+    justify-content: end;
+    gap:0px;
+}
+.Flowerimg-1 {
+    padding: 16px 40px;
+    gap: 15px;
+    font-size: 14px;
+    height: 50px;
 }
      }
