--- a/CSS/Summar_flower.css
+++ b/CSS/Summar_flower.css
@@ -275,7 +275,7 @@
           height: 140px;
         }
 
-        .parents_5{
+        .parentsmain_5{
           margin: auto;
           width: 90%;
           padding: 20px 0px;
@@ -369,8 +369,9 @@ input[type="checkbox"] {
 
 .parents_6 {
   display: flex;
+  justify-content: start;
   gap: 20px;
-  margin:30px 70px;
+  margin:30px 0px;
   flex-wrap: wrap;
 }
 
@@ -762,7 +763,7 @@ p{
 .parents_6 {
     display: flex;
     gap: 20px;
-    margin: 35px 73px;
+    margin: 35px 0px;
     flex-wrap: wrap;
 }
 .button-1 {
