--- a/CSS/Summar_flower.css
+++ b/CSS/Summar_flower.css
@@ -1064,6 +1064,19 @@ li,.footer_text{
 
      @media (min-width: 841px) and (max-width: 1080px){
      
+      .top-banner {
+    background-color: #f4dacd;
+    padding: 10px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    height: 50px;
+    font-weight: 800;
+    border-bottom: 1px solid #f4dacd;
+    font-family: sans-serif;
+    text-decoration: underline;
+}
 
 .star_1 {
     display: flex;
