--- a/CSS/Summar_flower.css
+++ b/CSS/Summar_flower.css
@@ -1141,6 +1141,8 @@ li,.footer_text{
 }
 .Flowerimg-1 {
     padding: 16px 10px;
+    margin: auto;
+    width: 80%;
     gap:0px;
     font-size: 14px;
     height: 50px;
