--- a/CSS/Summar_flower.css
+++ b/CSS/Summar_flower.css
@@ -1138,7 +1138,18 @@ li,.footer_text{
     display: flex;
     justify-content:center;
     align-items: center;
-    gap:0px;
-    
+    gap:0px; 
   }
+  .Flowerimg-1 {
+    display: flex;
+    justify-content: center;
+    padding: 16px 0px;
+    border: 1px solid #fffcf9;
+    background-color: #fffcf9;
+    gap: 0px;
+    font-size: 14px;
+    height: 50px;
+    font-family: Arial, sans-serif;
+    font-weight: 800;
+}
      }
