--- a/CSS/Summar_flower.css
+++ b/CSS/Summar_flower.css
@@ -1134,13 +1134,18 @@ li,.footer_text{
 .footer_4{
   display: none;
 }
-.nav_1{
+.nav2-img{
     display: flex;
-    justify-content:center;
-    align-items: center;
-    gap:0px; 
+    justify-content: center;
+    gap: 2px;
   }
-  .Flowerimg-1 {
+  .nav_1{
+    display: flex;
+    justify-content:end;
+    gap: 0px;
+    
+  }
+  .Flowerimg-1{
     display: flex;
     justify-content: center;
     padding: 16px 0px;
@@ -1148,9 +1153,15 @@ li,.footer_text{
     background-color: #fffcf9;
     gap: 0px;
     font-size: 14px;
-    height: 50px;
-    font-family: Arial, sans-serif;
-    font-weight: 800;
-     width: 100px;
-}
+    height:50px;
+     font-family: Arial,sans-serif;
+    font-weight:800;
+  }
+  
+  .Flowerimg{
+    width:100px;
+    height: 35px;
+     margin: 10px 0px;
+  }
+ 
      }
