--- a/CSS/Summar_flower.css
+++ b/CSS/Summar_flower.css
@@ -1141,7 +1141,7 @@ li,.footer_text{
   }
   .nav_1{
     display: flex;
-    justify-content:end;
+    justify-content:start;
     margin: auto;
     width: 80%;
     gap: 0px;
