--- a/CSS/Modern_flower.css
+++ b/CSS/Modern_flower.css
@@ -722,8 +722,8 @@ li:hover{
         top: 8px;
         left: 252px;
     }
-.star_3{
-  font-size: 30px;
+.text-3{
+  font-size: 15px;
 }
 .shopnow {
     width: 145px;
@@ -784,7 +784,7 @@ p{
 }
 .search {
     width: 25px;
-    height: 28px;
+    height: 25px;
 }
 .nav2-img {
     display: flex
