--- a/CSS/Shop_brithday.css
+++ b/CSS/Shop_brithday.css
@@ -721,8 +721,8 @@ li:hover{
         top: 8px;
         left: 252px;
     }
-.star_3{
-  font-size: 30px;
+.text-3{
+  font-size: 15px;
 }
 .shopnow {
     width: 145px;
@@ -783,7 +783,7 @@ p{
 }
 .search {
     width: 25px;
-    height: 28px;
+    height: 25px;
 }
 .nav2-img {
     display: flex
