--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1466,7 +1466,7 @@ li:hover{
 
 
 
-     @media (min-width: 481px) and (max-width: 840px){
+  @media (min-width: 481px) and (max-width:840px){
       
       .happiest_img,.blooms_img {
     width: 438px;
@@ -1617,6 +1617,14 @@ span{
   font-size: 40px;
 }
 }
+
+
+
+
+
+
+
+
 /****320-media-query**/
  @media (max-width: 320px){
 .proflowers-logo-1 {
@@ -1934,6 +1942,253 @@ li,.footer_text{
   width: 100%;
     }
   }
+
+    @media (min-width: 421px) and (max-width:440px){
+
+      .summer_img, .Farther_img ,.Farther_img,.Sweet_img ,.modern_img{
+    display: flex;
+    overflow: scroll;
+    justify-content: space-evenly;
+    gap: 20px;
+    padding: 20px 0px;
+    margin: auto;
+    width: 90%;
+    scrollbar-width: none;
+}
+
+.blooms ,.happiest{
+  display:flex;
+  flex-wrap: wrap;
+
+}
+.happiest_2{
+      width: 100%;
+}
+.text-3,.button-1 {
+  display: none;
+}
+.blooms_2{
+  width: 100%;
+}
+.nav2-img>.search,.parents_wine_menu_list,.parents-1{
+  display: none;
+}
+.nav_1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0px;
+     margin: auto;
+    width: 90%;
+    }
+
+
+    .search {
+        width: 25px;
+        height: 25px;
+    }
+
+.Flowerimg {
+    width: 150px;
+    height: 30px;
+    margin: 0px;
+}
+.Flowerimg-1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 34px;
+}
+.top-banner a{
+  font-size: 8px;
+}
+.star_1{
+  display: grid;
+}
+
+    .position-1 {
+        position: absolute;
+        top: 14px;
+        left: 50%;
+        z-index: 10;
+        width: 77%;
+        height: 288px;
+        padding: 13px 33px;
+    }
+
+    .fieldset-1 {
+        width: 260px;
+        height: 54px;
+        border: 1px solid black;
+        border-radius: 5px;
+    }
+.fieldset-2 {
+        height: 54px;
+        width: 260px;
+    }
+
+ .Calendar-img{
+  
+          display: none;
+        }
+        
+input, input :focus {
+    font-size: 16px;
+    padding: 5px 0px;
+}
+
+    .buttonserch {
+        width: 259px;
+        height: 43px;
+        font-size: 16px;
+        margin: 13px 0px;
+    }
+.summer_text {
+    font-size: 30px;
+    padding-top: 11px;
+}
+.button_2,.button_4,.button_8  {
+    width: 150px;
+    height: 50px;
+    padding: 10px 0px;
+    margin-left: 134px;
+    font-size: 15px;
+}
+.button_6{
+   width: 150px;
+    height: 50px;
+    padding: 5px 0px;
+    font-size: 12px;
+    margin-left: 134px;
+    font-size: 15px;
+}
+
+
+.happiest_img,.blooms_img {
+    width: 100%;
+    height: 255px;
+}
+.happiest_3, .blooms_3 {
+    border: 2px solid #f3eeea;
+    width:100%;
+    height: 255px;
+    background-color: #eee1d6;
+    padding: 30px 0px;
+    word-wrap: 2px;
+}
+.button_3,.button_5 {
+    width: 158px;
+    height: 51px;
+    padding: 10px 0px;
+    margin: 0px 0px;
+    margin-left: 128px;
+    font-size: 13px;
+}
+.happiest_text,.blooms_text{
+  font-size: 33px;
+}
+.happiest_text-1 {
+    text-align: center;
+    padding: 17px 0px;
+    font-size: 14px;
+}
+.pnk_bk_img,.bpl_bk_img {
+    height: 250px;
+    width: 100%;
+}
+.section_1 {
+    top: 36px;
+    left: 34%;
+    width: 59%;
+    height: 176px;
+    padding: 15px 20px !important;
+      }
+
+          .section_2 {
+        top: 42px;
+        left: 67%;
+        width: 59%;
+        height: 176px;
+        padding: 20px 20px !important;
+    }
+
+      .pnk_text ,.bpl_text {
+        font-size: 22px;
+      }
+      .pank_txt_1 {
+    padding: 6px 0px;
+    font-size: 11px;
+    letter-spacing: 0.5px;
+}
+.bpl_txt_1 {
+  font-size: 14px;
+   padding: 6px 0px;
+}
+.button_7 {
+    width: 108px;
+    height: 38px;
+    padding: 13px 0px;
+    margin-left: 0px;
+    font-size: 10px;
+}
+ .parents_main_5,.parents_main_4{
+  height: 80px;
+  margin:20px 0px
+
+}
+
+.Hire-7 > img,.Hire-6 > img {
+  width: 110px;
+}
+
+li,.footer_text{
+  display: none;
+}
+    .proflowers-logo-1 {
+        width: 240px;
+        margin: 0px 87px;
+    }
+
+.footer-form_1{
+  display: none;
+}
+.footerchilde_1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0px;
+    gap: 20px;
+}
+.lasfooter_text {
+    text-align: center;
+    margin: 18px 0px;
+    font-size: 12px;
+}
+.parensts_10 {
+    background-color: #f3eeea;
+    height: 250px;
+    padding: 30px 0px;
+}
+.slider_3D{
+  display: none;
+}
+.footer{
+  justify-content: center;
+}
+.top-banner {
+  justify-content: center;
+  padding: 0px 10px;
+  gap: 10px;
+  margin: auto;
+  font-size: 13px;
+  width: 100%;
+    }
+   
+    }
+
+
+
+
 
 
     @media (min-width: 841px) and (max-width: 1080px){
