--- a/SUMMAR_CSS/SF1.css
+++ b/SUMMAR_CSS/SF1.css
@@ -75,7 +75,7 @@
     }
 
 
-/*********/
+/*********/ 
 
 .top-banner {
       background-color: #f4dacd;
@@ -772,10 +772,10 @@ li {
     width: 348px;
     height: 59px;
 }
-.buttonserch {
-    width: 354px;
-    height: 50px;
-}
+    .buttonserch {
+        width: 347px;
+        height: 50px;
+    }
 .button-1 {
     width: 93px;
     height: 43px;
@@ -832,6 +832,26 @@ span{
 .parensts_10 {
     height: 740px;
 }
+.arrow{
+  display: none;
+}
+
+.main-image img {
+    width: 342px;
+    height: 330px;
+    border-radius: 10px;
+    border: 1px solid rgb(177, 176, 176);
+}
+
+.thumbnails img {
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+    border: 2px solid transparent;
+    border-radius: 6px;
+    transition: 0.3s;
+}
+
 }
 
 @media (max-width: 320px){
@@ -865,8 +885,28 @@ span{
         width: 250px !important;
         margin: 0px 20px !important;
     }
+    .arrow{
+  display: none;
+}
+.main-image img {
+           width: 300px !important;
+        height: 300px !important;
+    border-radius: 10px;
+    border: 1px solid rgb(177, 176, 176);
+}
+
+.thumbnails img {
+      width: 50px !important;
+      height: 50px !important;
+      cursor: pointer;
+      border: 2px solid transparent;
+      border-radius: 6px;
+      transition: 0.3s;
+    }
 
 }
+
+
  @media (min-width: 421px) and (max-width:440px){
   .lasfooter_text {
     text-align: center;
@@ -958,6 +998,17 @@ li,.footer_text{
     margin: 18px 0px;
     font-size: 12px;
 }
+.arrow{
+  display: none;
+}
+.main-image img {
+           width: 372px;
+        height: 344px;
+    border-radius: 10px;
+    border: 1px solid rgb(177, 176, 176);
+}
+
+
  }
 
 
@@ -1054,6 +1105,16 @@ li,.footer_text{
     margin: 18px 0px;
     font-size: 12px;
 }
+.arrow{
+  display: none;
+}
+.main-image img {
+           width: 372px;
+        height: 344px;
+    border-radius: 10px;
+    border: 1px solid rgb(177, 176, 176);
+}
+
   
  }
 
