--- a/SUMMAR_CSS/SF3.css
+++ b/SUMMAR_CSS/SF3.css
@@ -834,9 +834,30 @@ span{
 }
 
 
-        }
+.arrow{
+  display: none;
+}
 
-         @media (max-width: 420px){
+.main-image img {
+    width: 342px;
+    height: 330px;
+    border-radius: 10px;
+    border: 1px solid rgb(177, 176, 176);
+}
+
+.thumbnails img {
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+    border: 2px solid transparent;
+    border-radius: 6px;
+    transition: 0.3s;
+}
+
+
+ }
+
+@media (max-width: 420px){
   .lasfooter_text {
     text-align: center;
     margin: 18px 0px;
@@ -927,6 +948,17 @@ li,.footer_text{
     margin: 18px 0px;
     font-size: 12px;
 }
+
+.arrow{
+  display: none;
+}
+.main-image img {
+           width: 372px;
+        height: 344px;
+    border-radius: 10px;
+    border: 1px solid rgb(177, 176, 176);
+}
+  
   
  }
 
@@ -962,7 +994,27 @@ li,.footer_text{
         margin: 0px 20px !important;
     }
 
+ .arrow{
+  display: none;
 }
+.main-image img {
+           width: 300px !important;
+        height: 300px !important;
+    border-radius: 10px;
+    border: 1px solid rgb(177, 176, 176);
+}
+
+.thumbnails img {
+      width: 50px !important;
+      height: 50px !important;
+      cursor: pointer;
+      border: 2px solid transparent;
+      border-radius: 6px;
+      transition: 0.3s;
+    }
+}
+
+
  @media (min-width: 421px) and (max-width:440px){
   .lasfooter_text {
     text-align: center;
@@ -1054,4 +1106,14 @@ li,.footer_text{
     margin: 18px 0px;
     font-size: 12px;
 }
+.arrow{
+  display: none;
+}
+.main-image img {
+           width: 372px;
+        height: 344px;
+    border-radius: 10px;
+    border: 1px solid rgb(177, 176, 176);
+}
+
  }
