--- a/PRIDE_CSS/PRIDE9.css
+++ b/PRIDE_CSS/PRIDE9.css
@@ -835,6 +835,25 @@ span{
     height: 740px;
 }
 
+ .arrow{
+  display: none;
+}
+
+.main-image img {
+    width: 342px;
+    height: 330px;
+    border-radius: 10px;
+    border: 1px solid rgb(177, 176, 176);
+}
+
+.thumbnails img {
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+    border: 2px solid transparent;
+    border-radius: 6px;
+    transition: 0.3s;
+}
 
         }
 
@@ -929,6 +948,15 @@ li,.footer_text{
     text-align: center;
     margin: 18px 0px;
     font-size: 12px;
+}
+ .arrow{
+  display: none;
+}
+.main-image img {
+           width: 372px;
+        height: 344px;
+    border-radius: 10px;
+    border: 1px solid rgb(177, 176, 176);
 }
   
  }
@@ -1056,5 +1084,14 @@ li,.footer_text{
     text-align: center;
     margin: 18px 0px;
     font-size: 12px;
+}
+.arrow{
+  display: none;
+}
+.main-image img {
+           width: 372px;
+        height: 344px;
+    border-radius: 10px;
+    border: 1px solid rgb(177, 176, 176);
 }
  }
