--- a/LOCALSHOP_CSS/LS7.css
+++ b/LOCALSHOP_CSS/LS7.css
@@ -948,7 +948,15 @@ li,.footer_text{
     margin: 18px 0px;
     font-size: 12px;
 }
-  
+  .arrow{
+  display: none;
+}
+.main-image img {
+           width: 372px;
+        height: 344px;
+    border-radius: 10px;
+    border: 1px solid rgb(177, 176, 176);
+}
  }
 
 
@@ -983,8 +991,27 @@ li,.footer_text{
         width: 250px !important;
         margin: 0px 20px !important;
     }
+     .arrow{
+  display: none;
+}
+.main-image img {
+           width: 300px !important;
+        height: 300px !important;
+    border-radius: 10px;
+    border: 1px solid rgb(177, 176, 176);
+}
+
+.thumbnails img {
+      width: 50px !important;
+      height: 50px !important;
+      cursor: pointer;
+      border: 2px solid transparent;
+      border-radius: 6px;
+      transition: 0.3s;
+    }
 
 }
+
  @media (min-width: 421px) and (max-width:440px){
   .lasfooter_text {
     text-align: center;
@@ -1075,5 +1102,14 @@ li,.footer_text{
     text-align: center;
     margin: 18px 0px;
     font-size: 12px;
+}
+.arrow{
+  display: none;
+}
+.main-image img {
+           width: 372px;
+        height: 344px;
+    border-radius: 10px;
+    border: 1px solid rgb(177, 176, 176);
 }
  }
